<resources>
    <string name="app_name">Students Project</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_buttons">My buttons</string>
    <string name="my_webs">My websites</string>
    <string name="my_list">My list</string>
    <string name="title">My Students project 2: Menus </string>
    <string name="title_activity_my_buttons">My Buttons Activity</string>
    <string name="switch_button">My switch button </string>
    <string name="dona">Woman</string>
    <string name="home_va">Man</string>
    <string name="switch_off">Switch OFF</string>
    <string name="switch_on">Switch ON</string>
    <string name="textview">Touch on the switch</string>
    <string name="selected_element">Selected element:</string>
    <string name="el_diario">El Diario.es</string>
    <string name="levante">Levante EMV</string>
    <string name="el_diario_url">https://www.eldiario.es</string>
    <string name="levante_url">https://www.levante-emv.com/</string>

    <string name="title_activity_my_webs">My favourite websites </string>
    <string name="title_activity_my_list">My List Activity</string>
    <string name="name_writer">Name of the writer</string>
    <string name="date_writer">Date birth dead</string>
    <string name="text_writers">My favourite writers</string>
    <string name="name_book">Name of the book</string>
    <string name="book">Book</string>
    <string name="title_writers">My favourite writers</string>
    <string name="title_activity_my_list2">MyListActivity2</string>
    <string name="my_list2">My ArrayAdapter class</string>


</resources>
