<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyButtonsActivity"
    tools:showIn="@layout/activity_my_buttons">

    <TextView
        android:id="@+id/textSwitch"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="33dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_marginEnd="155dp"
        android:paddingEnd="10dp"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toEndOf="@+id/textSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="271dp"
        android:layout_height="429dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:color="#000000"
            android:padding="10dp">


            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:onClick="buttonONOFF"
                app:srcCompat="@drawable/on" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:color="#000000"
            android:padding="10dp">


            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:color="#000000"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/radio_id"
                android:layout_column="0"
                android:layout_span="3"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_dona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:padding="10dp"
                    android:text="@string/dona"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radio_home"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onRadioButtonClicked"
                    android:padding="10dp"
                    android:text="@string/home_va"
                    android:textSize="24sp" />

            </RadioGroup>

        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>